data/Java/19-access-non-static-method/4/[M]Error.txt
https://stackoverflow.com/questions/19600216/non-static-method-moveint-int-cannot-be-referenced-from-a-static-context
Program.java:18: error: non-static method hero(double,double,double) cannot be referenced from a static context
        area_of_triangle = (double) MyMath.hero(length_of_a,length_of_b,length_of_c);
                                          ^